--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,7 +83,7 @@ The architectural image of the stadium was modernized by the helicoal ramps that
     <string name="audio">Audio Guide</string>
     <string name="map">Map</string>
     <string name="sights">Sights</string>
-    <string name="restaurants">Restaurants</string>
+    <string name="restaurants">To eat</string>
     <string name="museums">Museums</string>
     <string name="duomo_url">http://www.duomomilano.it</string>
     <string name="sforza_url">https://www.milanocastello.it/</string>
@@ -180,5 +180,53 @@ This first lot marked the birth of the La Scala Theatre Museum that first opened
     <string name="mangiari_loc">45.443704, 9.117754</string>
     <string name="berbere_loc">45.487393, 9.190978</string>
     <string name="brisa_loc">45.465223, 9.180604</string>
+    <string name="name_var">placeName</string>
+    <string name="address_var">placeAddress</string>
+    <string name="desc_var">placeDescription</string>
+    <string name="img_var">placeImage</string>
+    <string name="audio_var">placeAudio</string>
+    <string name="site_var">placeSite</string>
+    <string name="loc_var">placeLocation</string>
+    <string name="coffee">Coffee</string>
+    <string name="marotin_name">Marotin</string>
+    <string name="marotin_address">Via Archimede 59, Milano</string>
+    <string name="marotin_desc">For the best apple cake in town, don’t miss this darling little corner spot in a quiet, residential area behind Via Lincoln. Reminiscent of a patisserie you would find in the backstreets of the Marais, Marotin’s gorgeous pastel hues will lure you in, and their equally delicious cappuccinos and croissants, plus the charming Art Nouveau floors and chic floaty design touches, will keep you coming back for more. It’s beautiful here.</string>
+    <string name="marotin_url">https://www.tripadvisor.co.hu/Restaurant_Review-g187849-d6210581-Reviews-Marotin-Milan_Lombardy.html</string>
+    <string name="marotin_loc">45.465601, 9.213652</string>
+    <string name="como_name">10 Corso Como</string>
+    <string name="como_address">Corso Como, 10, Milano</string>
+    <string name="como_desc">It’s hard to ignore the beauty and magic of the courtyard cafe here at 10 Corso Como. A mainstay on the fashion and design circuit in Milano, this romantic spot is surrounded by a world of citrus trees. It’s the most idyllic spot to sip on good coffee and tea after pounding the cobblestoned streets and shopping up a storm in the boutique next door. This is an afternoon worth looking forward to.</string>
+    <string name="como_url">http://www.10corsocomo.com/</string>
+    <string name="como_loc">45.481965, 9.187687</string>
+    <string name="gattullo_name">Pasticceria Gattullo</string>
+    <string name="gattullo_address">Piazzale di Porta Lodovica, 2, Milano</string>
+    <string name="gattullo_desc">For something more traditional there’s no missing Gattullo. We love this spot. Considered by many locals as a stalwart for all things delicious, this pastry shop and bakery has been a Milanese institution since 1961. Come here for excellent coffee (best enjoyed standing at the bar) and a tasty assortment of homemade brioches, pastries, panettone, bigne, cannoli, and rum-soaked baba. The décor is old-school Italy (think colourful, somewhat gaudy, and totally over the top). The uniforms match. It is full of charm, and there’s an energy here that is undeniably Milanese. It’s not only great for coffee, but it’s also the perfect answer for your picnic needs – the sandwiches to-go are worth waiting for.</string>
+    <string name="gattullo_url">http://www.gattullo.it/</string>
+    <string name="gattullo_loc">45.452082, 9.185875</string>
+    <string name="sissi_name">Pasticceria Sissi</string>
+    <string name="sissi_address">Piazza Risorgimento 6, Milano</string>
+    <string name="sissi_desc">Stepping into this enchanting pasticceria tucked down a side street on Piazza Risorgimento is somewhat like walking into a Wes Anderson film. Vintage paintings adorn the pink-coloured walls of this colourful tearoom and the friendly French-speaking staff swan around in a handsome uniform of caps and aprons. The coffee is (obviously) delicious and there is a super romantic ivy-covered garden courtyard where you can enjoy it. Known for having some of the best croissants in town, Sissi’s homemade cakes, cannoli and breakfast brioche will also have you coming back for more. This is a friendly neighbourhood spot where the staff will remember you by name, and you’ll likely be rubbing shoulders with the who’s who of the fashion set, who work nearby. Place your order at the bar, eat, drink and then pay. And keep in mind, they’re closed on Tuesdays (completely devastating if you forget, trust us).</string>
+    <string name="sissi_url">https://www.tripadvisor.it/Restaurant_Review-g187849-d2695674-Reviews-Pasticceria_Sissi-Milan_Lombardy.html</string>
+    <string name="sissi_loc">45.467173, 9.209956</string>
+    <string name="cuccagna_name">Cascina Cuccagna</string>
+    <string name="cuccagna_address">Via Giuseppe Ponzio, 82, Milano</string>
+    <string name="cuccagna_desc">It’s hard to believe that you could drink good coffee and enjoy lunch on a farm in the centre of Milano, but at Cascina Cuccagna this is exactly what you can do. Immersed amongst the tall apartment buildings of the Porto Romana neighbourhood, this formerly abandoned 17th-century farmhouse was recently converted into an urban farm, cultural centre and café. It’s a peaceful and relaxing oasis amid the hustle and bustle of the city. The coffee is good, the Campari is even better and there are plenty of beautiful outdoor green spaces to enjoy it. With a rotating,seasonal menu, the food options here are wonderful as well.</string>
+    <string name="cuccagna_url">http://www.cuccagna.org/portal/IT/handle/?page=homepage</string>
+    <string name="cuccagna_loc">45.482332, 9.230543</string>
+    <string name="pave_name">Pavé Milano</string>
+    <string name="pave_address">Via Felice Casati 27, Milano</string>
+    <string name="pave_desc">An artisan bakery where everything is made in front of your eyes. A world of food, music and words where making good products and bring them to you in the most beautiful way possible. Quality ingredients, traditional values and craftsmanship are all implemented in our small kitchen laboratory. And a window on everyday world is there to share our lives with you. There will be times when the fragrance of our breads will blend with the aroma of the cakes, your words will translate into songs and your smiles will become our favourite good morning.</string>
+    <string name="pave_url">https://www.pavemilano.com/en/</string>
+    <string name="pave_loc">45.479110, 9.202548</string>
+    <string name="cat_name">Crazy Cat Cafe</string>
+    <string name="cat_address">Via Napo Torriani 5, Milano</string>
+    <string name="cat_desc">The Crazy Cat Café came about because of a great love for cats and thanks to an unforgettable experience in Japan, in a Neko Café in Osaka. So, in October 2015, the one and only first Cat Café in Lombardy was opened. Its aim, following the Italian lifestyle, is to offer an intimate meeting place like the typical Japanese Neko Cafés, where the real hosts are the nine cats living in the Café.</string>
+    <string name="cat_url">http://www.crazycatcafe.it/en/</string>
+    <string name="cat_loc">45.480876, 9.203487</string>
+    <string name="bianco_name">Bianco Latte</string>
+    <string name="bianco_address">Via Turati 30, Milano</string>
+    <string name="bianco_desc">Biancolatte offers a great variety of homemade products for breakfast: croissants, muffins, baci di dama, and many types of cookies and biscuits.</string>
+    <string name="bianco_url">http://www.biancolatte.it/en</string>
+    <string name="bianco_loc">45.476279, 9.195476</string>
 </resources>
 
